--- a/AddProduct.html
+++ b/AddProduct.html
@@ -48,7 +48,11 @@
     <!-- view product section-->
     <section class="my-5">
         <div class="container">
-
+            <h2 id="productHeadline">Our Products</h2>
+            <div id="searchItem" class="w-50 my-4">
+                <input type="text" placeholder="Search" class="form-control" id="mySearchInp">
+                <i class="fas fa-lg fa-search mySearch"></i>
+            </div>
             <div class="row" id="dataRow">
             </div>
         </div>
