--- a/AddProduct.html
+++ b/AddProduct.html
@@ -15,41 +15,42 @@
     <!--header section-->
     <section id="productHeader">
         <div class=" my-Container m-auto">
-            <!--add product section-->
-            <div class="col-md-8">
+            <!--Add product section-->
 
-                <form>
-                    <div class="form-group">
+            <form class="form-style-9">
+                <ul>
+                    <li>
                         <label for="productName">Product Name</label>
-                        <input onkeyup="disableBtn()" id='productName' type="text" class="form-control">
-                    </div>
-
-                    <div class="form-group">
-                        <label for="productText">Product Description</label>
-                        <textarea onkeyup="disableBtn()" id='productDesc' class="form-control" rows="3"></textarea>
-                    </div>
-                    <div class="form-group">
+                        <input onkeyup="disableBtn()" id='productName' type="text" class="field-style field-full align-none">
+                    </li>
+                    <li class="form-group">
                         <label for="productModel">Product Model</label>
-                        <input onkeyup="disableBtn()" id='productModel' type="text" class="form-control">
-                    </div>
-                    <div class="form-group">
+                        <input onkeyup="disableBtn()" id='productModel' type="text" class="field-style field-full align-none">
+                    </li>
+                    <li class="form-group">
                         <label for="productPrice">Product Price</label>
-                        <input onkeyup="disableBtn()" id='productPrice' type="text" class="form-control">
-                    </div>
-                    <div class="form-group">
+                        <input onkeyup="disableBtn()" id='productPrice' type="text" class="field-style field-full align-none"">
+                    </li>
+                    <li class="form-group">
                         <label for="productImg">Link Image</label>
-                        <input onkeyup="disableBtn()" id='productImg' type="text" class="form-control">
-                    </div>
-                </form>
-                <button id='productBtn' type="submit" class="btn btn-primary">Add product</button>
-            </div>
+                        <input onkeyup="disableBtn()" id='productImg' type="text" class="field-style field-full align-none">
+                    </li>
+                    <li class="form-group">
+                        <label for="productText">Product Description</label>
+                        <textarea onkeyup="disableBtn()" id='productDesc'  class="field-style" rows="3"></textarea>
+                    </li>
+                    <button id='productBtn' type="submit" class="btn btn-primary">Add product</button>
+                </ul>
+            </form>
+
+
             <!--end product section-->
-            
+
         </div>
     </section>
     <!--END header section-->
 
-    
+
     <!-- view product section-->
     <section class="my-5">
         <div class="container">
