cambios en style

--- a/index.html
+++ b/index.html
@@ -21,15 +21,19 @@
 </head>
 
 <body>
-    <div class="container">
-        <div class="row">
-            <div class="col s12">
-                <h1 class="center-align titulo">What are you up for today?</h1>
-                <div class="row" id="dataRow">
-                </div>
+  
+    </div>
+    <section class="my-5">
+        <div class="container">
+
+            <div id="searchItem" class="w-50 my-4" style="margin-left: 26%;">
+                <input type="text" placeholder="Search" class="form-control" id="mySearchInp">
+                <i class="fas fa-lg fa-search mySearch"></i>
+            </div>
+            <div class="row" id="dataRow">
             </div>
         </div>
-    </div>
+    </section>
     <section id="productHeader">
         <div class=" my-Container m-auto">
             <!--Add product section-->
